--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -9,4 +9,28 @@
     gap: 45px;
 }
 
+.btn-proceed {
+    background: #FF9900;
+    width: 90%;
+    height: 56px;
+    font-size: 21px;
+    margin: 10px auto;
+    border-radius: 4px;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
+}
+
+
+
+
+.pagination{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.pagination .selected{
+    background-color: #FF9900;
+}
